apt (0.9.5.2) UNRELEASED; urgency=low

  [ David Kalnischkies ]
  * cmdline/apt-get.cc:
    - do not show 'list of broken packages' header if no package
      is broken as it happens e.g. for external resolver errors

 -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 24 May 2012 19:40:58 +0200

apt (0.9.5.1) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/fileutl.cc:
    - dup() given compressed fd in OpenDescriptor if AutoClose
      is disabled as otherwise gzclose() and co will close it
  * doc/*.xml:
    - mark even more stuff as untranslateable and improve the
      markup here and there (no real text change)
    - use docbook DTD 4.5 instead of 4.2 to have valid docs

  [ Justin B Rye ]
  * doc/*.xml:
    - remove 'GNU/Linux' from 'Debian systems' strings as Debian
      has more systems than just GNU/Linux nowadays
  * doc/apt-cache.8.xml:
    - fix a typo as well as adding missing literal markup
    - three small rewordings for better english sentences

 -- Michael Vogt <mvo@debian.org>  Thu, 24 May 2012 17:16:34 +0200

apt (0.9.5) unstable; urgency=low

  [ Chris Leick ]
  * proofreading of the manpage pot
  * German manpage translation update (Closes: #673294)

  [ David Kalnischkies ]
  * buildlib/podomain.mak:
    - ensure that all sources end up in the srclist so that we don't
      forget to extract half of the translation strings
  * buildlib/inttypes.h.in:
    - remove inttypes.h compatibility as providing such a c99 types
      compatibility conflicts with the usage of c99 type long long
  * apt-pkg/contrib/mmap.cc:
    - have a dummy SyncToFd around in case of ReadOnly access to a
      compressed file as we otherwise on Close() do not delete[] the
      char buffer but munmap() it… (Closes: #673815)
  * debian/control:
    - moving debiandoc-sgml to Build-Depends-Indep was one step too much
      for the buildds as we still build two sgml files in arch:any
  * debian/rules: