@@ -29,13 +29,13 @@
  <!-- Man page title -->
  <refnamediv>
     <refname>apt-cdrom</refname>
-    <refpurpose>APT CDROM management utility</refpurpose>
+    <refpurpose>APT CD-ROM management utility</refpurpose>
  </refnamediv>
 
  &synopsis-command-apt-cdrom;
 
  <refsect1><title>Description</title>
-   <para><command>apt-cdrom</command> is used to add a new CDROM to APTs list
+   <para><command>apt-cdrom</command> is used to add a new CD-ROM to APTs list
     of available sources. <command>apt-cdrom</command> takes care of
    determining the structure of
    the disc as well as correcting for several possible mis-burns and 
@@ -55,13 +55,13 @@
      <varlistentry><term><option>add</option></term>
      <listitem><para><literal>add</literal> is used to add a new disc to the
      source list. It will unmount the
-     CDROM device, prompt for a disk to be inserted and then proceed to 
+     CD-ROM device, prompt for a disk to be inserted and then proceed to 
      scan it and copy the index files. If the disc does not have a proper
      <filename>disk</filename> directory you will be prompted for a descriptive 
      title.
      </para>
 
-     <para>APT uses a CDROM ID to track which disc is currently in the drive and
+     <para>APT uses a CD-ROM ID to track which disc is currently in the drive and
      maintains a database of these IDs in 
      <filename>&statedir;/cdroms.list</filename>
      </para>
