@@ -427,8 +427,8 @@ DPkg::Pre-Install-Pkgs {"/usr/sbin/dpkg-preconfigure --apt";};
      </varlistentry>
 
      <varlistentry><term><option>cdrom</option></term>
-     <listitem><para>CDROM URIs; the only setting for CDROM URIs is the mount point, 
-     <literal>cdrom::Mount</literal> which must be the mount point for the CDROM drive 
+     <listitem><para>CD-ROM URIs; the only setting for CD-ROM URIs is the mount point, 
+     <literal>cdrom::Mount</literal> which must be the mount point for the CD-ROM drive 
      as specified in <filename>/etc/fstab</filename>. It is possible to provide 
      alternate mount and unmount commands if your mount point cannot be listed 
      in the fstab (such as an SMB mount and old mount packages). The syntax 
@@ -773,7 +773,7 @@ DPkg::TriggersPending "true";</literallayout></para>
        <listitem>
 	 <para>
 	   <literal>Debug::IdentCdrom</literal> disables the inclusion
-	   of statfs data in CDROM IDs.  <!-- TODO: provide a
+	   of statfs data in CD-ROM IDs.  <!-- TODO: provide a
 	   motivating example, except I haven't a clue why you'd want
 	   to do this. -->
 	 </para>
