@@ -164,7 +164,7 @@ not copied into here; it is instead found as part of status or available.
 <item>methods - this directory is reserved for "method"-specific files - each
 "method" has a subdirectory underneath this directory (or at least, it can
 have). In addition, there is another subdirectory "mnt", where misc.
-filesystems (floppies, CDROMs, etc.) are mounted.
+filesystems (floppies, CD-ROMs, etc.) are mounted.
 <item>alternatives - directory used by the "update-alternatives" program. It
 contains one file for each "alternatives" interface, which contains information
 about all the needed symlinked files for each alternative.
