@@ -90,7 +90,7 @@ APT
 
   Authentication
   {
-     TrustCDROM "false";            // consider the CDROM always trusted
+     TrustCDROM "false";            // consider the CD-ROM always trusted
   };
 
   // Some general options
