@@ -1,6 +1,6 @@
 # See sources.list(5) for more information, especialy
 # Remember that you can only use http, ftp or file URIs
-# CDROMs are managed through the apt-cdrom tool.
+# CD-ROMs are managed through the apt-cdrom tool.
 deb http://http.us.debian.org/debian stable main contrib non-free
 deb http://security.debian.org stable/updates main contrib non-free
 
