@@ -174,11 +174,11 @@ select the packages to be installed or removed and APT actually installs them.
 To enable the APT method you need to select [A]ccess in <prgn>dselect</> 
 and then choose the APT method. You will be prompted for a set of 
 <em>Sources</> which are places to fetch archives from. These can be remote
-Internet sites, local Debian mirrors or CDROMs. Each source can provide
+Internet sites, local Debian mirrors or CD-ROMs. Each source can provide
 a fragment of the total Debian archive, APT will automatically combine them
-to form a complete set of packages. If you have a CDROM then it is a good idea
+to form a complete set of packages. If you have a CD-ROM then it is a good idea
 to specify it first and then specify a mirror so that you have access to
-the latest bug fixes. APT will automatically use packages on your CDROM before
+the latest bug fixes. APT will automatically use packages on your CD-ROM before
 downloading from the Internet.
 
 <p>
