@@ -220,7 +220,7 @@ the ones it wants.
 <tag>Local<item>The method only returns Filename: fields.
 <tag>Send-Config<item>Send configuration to the method.
 <tag>Needs-Cleanup<item>The process is kept around while the files it returned
-are being used. This is primarily intended for CDROM and File URIs that need
+are being used. This is primarily intended for CD-ROM and File URIs that need
 to unmount filesystems.
 <tag>Version<item>Version string for the method
 </taglist>
@@ -318,7 +318,7 @@ Fields: Media, Fail
 <p>
 The methods supplied by the stock apt are:
 <enumlist>
-<item>cdrom - For Multi-Disc CDROMs
+<item>cdrom - For Multi-Disc CD-ROMs
 <item>copy - (internal) For copying files around the filesystem
 <item>file - For local files
 <item>gzip - (internal) For decompression
