@@ -4,6 +4,9 @@ apt (0.9.5.2) UNRELEASED; urgency=low
   * cmdline/apt-get.cc:
     - do not show 'list of broken packages' header if no package
       is broken as it happens e.g. for external resolver errors
+  [ Justin B Rye ]
+  * doc/apt-cdrom.8.xml:
+    - replace CDROM with the proper CD-ROM in text
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 24 May 2012 19:40:58 +0200
 
